  (byte->float) to be instance methods not static methods.  This way a
  custom Similarity can alter how norms are encoded, though they must
  still be encoded as a single byte (Johan Kindgren via Mike
  McCandless)
  
* LUCENE-2103: NoLockFactory should have a private constructor;
  until Lucene 4.0 the default one will be deprecated.
  (Shai Erera via Uwe Schindler) 

Bug fixes

* LUCENE-2092: BooleanQuery was ignoring disableCoord in its hashCode
  and equals methods, cause bad things to happen when caching
  BooleanQueries.  (Chris Hostetter, Mike McCandless)

* LUCENE-2095: Fixes: when two threads call IndexWriter.commit() at
  the same time, it's possible for commit to return control back to
  one of the threads before all changes are actually committed.
  (Sanne Grinovero via Mike McCandless)

* LUCENE-2119: Don't throw NegativeArraySizeException if you pass
  Integer.MAX_VALUE as nDocs to IndexSearcher search methods.  (Paul
  Taylor via Mike McCandless)

* LUCENE-2132: Fix the demo result.jsp to use QueryParser with a 
  Version argument.  (Brian Li via Robert Muir)

* LUCENE-2142: FieldCacheImpl.getStringIndex no longer throws an
  exception when term count exceeds doc count.  (Mike McCandless)

* LUCENE-2166: Don't incorrectly keep warning about the same immense
  term, when IndexWriter.infoStream is on.  (Mike McCandless)

* LUCENE-2104: NativeFSLock.release() would silently fail if the lock is held by 
  another thread/process.  (Shai Erera via Uwe Schindler)

* LUCENE-2158: At high indexing rates, NRT reader could temporarily
  lose deletions.  (Mike McCandless)
  
New features

* LUCENE-2128: Parallelized fetching document frequencies during weight
  creation. (Israel Tsadok, Simon Willnauer via Uwe Schindler) 

* LUCENE-2069: Added Unicode 4 support to CharArraySet. Due to the switch
  to Java 5, supplementary characters are now lowercased correctly if the
  set is created as case insensitive.